2024-11-22  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha05: Break of Dawn';git push
	git tag -a 5.3.0-alpha05 -m 'ncks: S1D ilun_UNUSED; ncrcat: fix	REC_APN wrn';git push --tags

	* ncrcat: Allow monotonicity test when REC_APN,	ensure last value and monotonicity already defined before comparison

2024-11-21  Charlie Zender  <zender@uci.edu>

	* ncrcat: Eschew monotonicity test nco_rec_crd_chk() when --record_append = REC_APN is true

2024-11-19  Charlie Zender  <zender@uci.edu>

	* S1D retrofit to work with CLMv4 datasets with ilun_UNUSED instead of ilun_glacier

	* NCO 5.3.0-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha04: Nail Biter';git push
	git tag -a 5.3.0-alpha04 -m 'ncks: S1D lut_out, wgt_all, wgt_soi_glc options; ncremap: eamxx landfrac ok';git push --tags

	* Finish/test/validate implementation of lut_vld_flg

2024-11-15  Charlie Zender  <zender@uci.edu>

	* Add and prepare to use lut_vld_flg array instead of lnd_typ_vld_1st

	* Add lut_out enum functionality to support forthcoming lut_out option for columns

	* Refactor S1D handling of MEC and non-MEC columns

2024-11-12  Charlie Zender  <zender@uci.edu>

	* Add deep lake and wetland columns to frc_column variable

2024-11-07  Charlie Zender  <zender@uci.edu>

	* Fix allocation dimension for frc_landunit, now works on ne30 datasets

2024-11-06  Charlie Zender  <zender@uci.edu>

	* ncremap squelch SGS normalization WARNING due to landfrac in EAMxx files

2024-11-05  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha03: Slow Horses';git push
	git tag -a 5.3.0-alpha03 -m 'ncks: S1D mecp1 soil, frc_column, frc_landunit';git push --tags

	* Diagnostic frc_column and frc_landunit from restart files works

2024-11-04  Charlie Zender  <zender@uci.edu>

	* Add infrastructure to diagnose frc_column and frc_landunit from restart files
