@@ -4,7 +4,9 @@
 	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha05: Break of Dawn';git push
 	git tag -a 5.3.0-alpha05 -m 'ncks: S1D ilun_UNUSED; ncrcat: fix	REC_APN wrn';git push --tags
 
-	* ncrcat: Allow monotonicity test when REC_APN,	ensure last value and monotonicity already defined before comparison
+	* S1D add snw_ocn and no_snw_ocn flags to affirm or disable unpacking of snow levels to ocean-like ordering
+
+	* ncrcat: Allow monotonicity test when REC_APN,	ensure last value and monotonicity defined before comparison
 
 2024-11-21  Charlie Zender  <zender@uci.edu>
 
